@@ -1,5 +1,5 @@
 + set TMCG_MPZ_IO_BASE to 62, which is supported by libgmp >= 4.2
-  (However, this breaks all backward compatibility.)
+  (However, this breaks all backward compatibility and we gain not much.)
 + see TODO header of GrothVSSHE.cc
 
 - implement the exotic card and stack operations of the toolbox
